specs/001-typescript-to-zig-native/examples/valid/bool-operators.ts
const ready = true;
const disabled = false;

if (ready && !disabled) {
  console.log("ok");
}
