specs/001-typescript-to-zig-native/examples/invalid/function-missing-return.ts
function maybe(flag: boolean): int {
  if (flag) {
    return 1;
  }
}

console.log(maybe(true));
